# frc-regwatch

./: .gitignore  build_data.py  data_manifest.toml  download.py  git_util.py  main.py  pyproject.toml
.github/workflows/: run-2025.yml  run-2026.yml  run.yml
data/2023/: 2023alhu.teams.txt  2023arc.teams.txt  2023arli.teams.txt  2023ausc.teams.txt  2023auwarp.teams.txt  2023azgl.teams.txt  2023azgl2.teams.txt  2023azgle.teams.txt  2023azrl.teams.txt  2023azrl4.teams.txt  2023aztem.teams.txt  2023azva.teams.txt  2023bcvi.teams.txt  2023brbr.teams.txt  2023brd.teams.txt  2023caav.teams.txt  2023cabb.teams.txt  2023cabl.teams.txt  2023cacc.teams.txt  2023cacg.teams.txt  2023cada.teams.txt  2023cafr.teams.txt  2023cala.teams.txt  2023camb.teams.txt  2023caoc.teams.txt  2023caph.teams.txt  2023casd.teams.txt  2023casdf.teams.txt  2023casf.teams.txt  2023casj.teams.txt  2023cass.teams.txt  2023catt.teams.txt  2023cave.teams.txt  2023cavs.teams.txt  2023cc.teams.txt  2023chcmp.teams.txt  2023cmptx.teams.txt  2023cnsh.teams.txt  2023code.teams.txt  2023cokc.teams.txt  (+251 more)
data/2024/: 2024alhu.teams.txt  2024arc.teams.txt  2024arli.teams.txt  2024arsea.teams.txt  2024audd.teams.txt  2024ausc.teams.txt  2024auwarp.teams.txt  2024azgl.teams.txt  2024azgl2.teams.txt  2024azrl.teams.txt  2024azrl1.teams.txt  2024azrl4.teams.txt  2024azrl5.teams.txt  2024aztem.teams.txt  2024azva.teams.txt  2024bc.teams.txt  2024bcvi.teams.txt  2024brbr.teams.txt  2024brsc.teams.txt  (+291 more)
docs/: data-format.md
test/: decode-data-file.js  test_build_data.py
ui/: package.json  vite.config.js
(+609 files in other folders)
